--- a/Discord SE Music Project/package.json
+++ b/Discord SE Music Project/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.6.7",
+    "firebase": "^9.10.0",
+    "howler": "^2.2.3",
     "vee-validate": "^4.6.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
